--- a/examples/server/matterbuild.yaml
+++ b/examples/server/matterbuild.yaml
@@ -38,7 +38,7 @@ materials:
   #- uri: "s3://mattermost-development-test/build-test/"
   #  digest:
   #    sha1: e97447134cd650ee9f9da5d705a06d3c548d3d6c
-  - uri: s3://mattermost-development-test/build-test/${WEBAPP_SOURCE}/mattermost-webapp.tar.gz
+  - uri: s3://mattermost-development-test/build-test/${MMBUILD_STAGING_PATH}/mattermost-webapp.tar.gz
   - uri: ${PLUGIN_STORE_URL}/mattermost-plugin-antivirus-v0.1.2-linux-amd64.tar.gz
   - uri: ${PLUGIN_STORE_URL}/mattermost-plugin-autolink-v1.2.2-linux-amd64.tar.gz
   - uri: ${PLUGIN_STORE_URL}/mattermost-plugin-aws-SNS-v1.2.0-linux-amd64.tar.gz
